--- a/GroupProjects/DM1_GROUPE11.ipynb
+++ b/GroupProjects/DM1_GROUPE11.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8db270b1",
+   "id": "db4dc618",
    "metadata": {},
    "source": [
-    "# <font color='289C4E'>Devoir Maison 1\n",
+    "# <font color='289C4E'>Devoir Maison 1: Régression Linéaire Multiple\n",
     "**Élèves**: Sadegh ABDERRAHIM & Gabriel PEREIRA DE CARVALHO & Otávio RIBAS"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "650754a4",
+   "id": "40eaa0a1",
    "metadata": {},
    "source": [
     "### <font color='289C4E'>Table des matières<font><a class='anchor' id='top'></a>\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d1896e",
+   "id": "fa8af08a",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.1 Estimation par moindres carrés du vecteur $\\beta$</font></h1> <a class=\"anchor\" id=\"Partie1\"></a>"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "800bca39",
+   "id": "509c44eb",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"E1\"></a>"
@@ -67,13 +67,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46809ade",
+   "id": "12624040",
    "metadata": {},
-   "source": []
+   "source": [
+    "On remarque que toute solution $\\hat{u} \\in \\argmin_{u \\in \\mathbb{R}^p} J_n(u)$ est une solution de l'équation $\\nabla J_n(u) = 0_{\\mathbb{R}^p}$.\n",
+    "On obtient ainsi qu'elle solution du système d'équations linéaires\n",
+    "$$\\begin{align}\n",
+    "&\\frac{\\partial J_n(u)}{\\partial u_k} = 0 \\quad \\text{pour } k \\in \\{1,...,p\\} \\\\\n",
+    "\\iff& \\sum_{i=1}^{n} Z_{i}^{k}\\left(Y_i - \\sum_{l=1}^{p} u_lZ_i^l \\right) = 0  \\quad \\forall k \\in \\{1,...,p\\} \\\\\n",
+    "\\iff& \\sum_{i=1}^{n} Z_i^kY_i = \\sum_{i=1}^{n} \\left(\\sum_{l=1}^{p}u_lZ_i^l\\right)Z_i^k \\quad \\forall k \\in \\{1,...,p\\}.\n",
+    "\\end{align}$$\n",
+    "Donc, en notation matricielle\n",
+    "$$ Z^T $$"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "6fc34975",
+   "id": "c5894f70",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"E2\"></a>"
@@ -81,13 +91,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf2f594",
+   "id": "49de7dba",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "67e4fb02",
+   "id": "ede34fa5",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"E3\"></a>"
@@ -95,13 +105,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "233d89c2",
+   "id": "1ca82493",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "803a9e3c",
+   "id": "dc53bfae",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"E4\"></a>"
@@ -109,13 +119,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53fb9d28",
+   "id": "1a9dfafe",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f7e97194",
+   "id": "2450d510",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"E5\"></a>"
@@ -123,13 +133,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e98a4e2",
+   "id": "8bf2b919",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "297f64e3",
+   "id": "ca97f822",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"E6\"></a>"
@@ -137,13 +147,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e924561",
+   "id": "35101a3a",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e332b857",
+   "id": "6797666f",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 7</font></h2> <a class=\"anchor\" id=\"E7\"></a>"
@@ -151,13 +161,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1570c80",
+   "id": "4543fa12",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a82d11e9",
+   "id": "91b2c385",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 8</font></h2> <a class=\"anchor\" id=\"E8\"></a>"
@@ -165,13 +175,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41d0d05",
+   "id": "6f07c68a",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f96dfe6f",
+   "id": "fb7e2e01",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.2 Estimation de la variance $\\sigma^2$ et Coefficient de détermination</font></h1> <a class=\"anchor\" id=\"Partie2\"></a>"
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07de478c",
+   "id": "8b85c348",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 9</font></h2> <a class=\"anchor\" id=\"E9\"></a>"
@@ -187,13 +197,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b21a5c21",
+   "id": "3faf9bf9",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e1f39a73",
+   "id": "bd6c90eb",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 10</font></h2> <a class=\"anchor\" id=\"E10\"></a>"
@@ -201,13 +211,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eba8f504",
+   "id": "a9095608",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "71c57b0c",
+   "id": "e231530c",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.3 Cas de la régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie3\"></a>"
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd899f3",
+   "id": "2dacc9c6",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 11</font></h2> <a class=\"anchor\" id=\"E11\"></a>"
@@ -223,13 +233,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9697fec",
+   "id": "0af9a0e2",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "18ed2243",
+   "id": "00073f90",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 12</font></h2> <a class=\"anchor\" id=\"E12\"></a>"
@@ -237,13 +247,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63be0a93",
+   "id": "60d87c42",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d0ecf54c",
+   "id": "7dca6f21",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 13</font></h2> <a class=\"anchor\" id=\"E13\"></a>"
@@ -251,13 +261,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "494b1f1c",
+   "id": "2b50dd81",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3f163356",
+   "id": "3385bd24",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 14</font></h2> <a class=\"anchor\" id=\"E14\"></a>"
@@ -265,13 +275,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456a5754",
+   "id": "bab7fc59",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "68aa7150",
+   "id": "fdc4289c",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.4 Tests statistiques, cas régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie4\"></a>"
@@ -279,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ecd106f",
+   "id": "a34b7f42",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 15</font></h2> <a class=\"anchor\" id=\"E15\"></a>"
@@ -287,13 +297,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eed5e101",
+   "id": "e8f9bcb2",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "675f71e1",
+   "id": "b68fbcb6",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 16</font></h2> <a class=\"anchor\" id=\"E16\"></a>"
@@ -301,13 +311,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af91c1ff",
+   "id": "3b8e3210",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f86fa9ff",
+   "id": "2645cc19",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 17</font></h2> <a class=\"anchor\" id=\"E17\"></a>"
@@ -315,13 +325,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3ca3acb",
+   "id": "8ac6f05e",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e26219fa",
+   "id": "87376de8",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 18</font></h2> <a class=\"anchor\" id=\"E18\"></a>"
@@ -329,13 +339,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d323e849",
+   "id": "b8ba777e",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4e0819e8",
+   "id": "682792e7",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 19</font></h2> <a class=\"anchor\" id=\"E19\"></a>"
@@ -343,13 +353,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c03d40d",
+   "id": "a2037545",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a6d7cbc7",
+   "id": "28a0c0b6",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 20</font></h2> <a class=\"anchor\" id=\"E20\"></a>"
@@ -357,13 +367,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7f74cf5",
+   "id": "3cd027b4",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5c7674b4",
+   "id": "11d06a30",
+   "metadata": {},
+   "source": [
+    "<h2 align=\"center\"> <font color='gray'>Python Imports</font></h2> <a class=\"anchor\" id=\"imports\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a661fc5",
+   "metadata": {},
+   "source": [
+    "Dans cette section, on va importer tous les paquets qu'on ira utiliser."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "42871e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy.random as npr\n",
+    "import scipy.stats as sps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcdff68f",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>2. Pratique</font></h1> <a class=\"anchor\" id=\"Pratique\"></a>"
@@ -371,40 +411,96 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edfa60aa",
+   "id": "6f347d8c",
    "metadata": {},
    "source": [
-    "<h2 align=\"center\"> <font color='blue'>Exercice 20</font></h2> <a class=\"anchor\" id=\"E20\"></a>"
+    "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"P1\"></a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "056ce728",
+   "id": "14a1af18",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "db4168f5",
+   "metadata": {},
+   "source": [
+    "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"P2\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a56f12e",
+   "id": "bd4d38bb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "3bb7ef00",
+   "metadata": {},
+   "source": [
+    "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"P3\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b988b035",
+   "id": "5f7d349b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "06922043",
+   "metadata": {},
+   "source": [
+    "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"P4\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c43037f",
+   "id": "c9797104",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a381a404",
+   "metadata": {},
+   "source": [
+    "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"P5\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "777afb4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af817883",
+   "metadata": {},
+   "source": [
+    "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"P6\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f229f4b6",
    "metadata": {},
    "outputs": [],
    "source": []
