--- a/GroupProjects/DM1_GROUPE11.ipynb
+++ b/GroupProjects/DM1_GROUPE11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db4dc618",
+   "id": "5742a270",
    "metadata": {},
    "source": [
     "# <font color='289C4E'>Devoir Maison 1: Régression Linéaire Multiple\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40eaa0a1",
+   "id": "9e6cc74f",
    "metadata": {},
    "source": [
     "### <font color='289C4E'>Table des matières<font><a class='anchor' id='top'></a>\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa8af08a",
+   "id": "1d2668b5",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.1 Estimation par moindres carrés du vecteur $\\beta$</font></h1> <a class=\"anchor\" id=\"Partie1\"></a>"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "509c44eb",
+   "id": "793ae42e",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"E1\"></a>"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12624040",
+   "id": "4a732631",
    "metadata": {},
    "source": [
     "On remarque que toute solution $\\hat{u} \\in \\argmin_{u \\in \\mathbb{R}^p} J_n(u)$ est une solution de l'équation $\\nabla J_n(u) = 0_{\\mathbb{R}^p}$.\n",
@@ -77,13 +77,14 @@
     "\\iff& \\sum_{i=1}^{n} Z_{i}^{k}\\left(Y_i - \\sum_{l=1}^{p} u_lZ_i^l \\right) = 0  \\quad \\forall k \\in \\{1,...,p\\} \\\\\n",
     "\\iff& \\sum_{i=1}^{n} Z_i^kY_i = \\sum_{i=1}^{n} \\left(\\sum_{l=1}^{p}u_lZ_i^l\\right)Z_i^k \\quad \\forall k \\in \\{1,...,p\\}.\n",
     "\\end{align}$$\n",
-    "Donc, en notation matricielle\n",
-    "$$ Z^T $$"
+    "Donc, en notation matricielle, \n",
+    "$$ \\mathbf{Z^TY} = \\mathbf{Z^TZu} $$\n",
+    "et $\\hat{u}$ est solution de ce système."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c5894f70",
+   "id": "89184791",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"E2\"></a>"
@@ -91,13 +92,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49de7dba",
+   "id": "a9d6a904",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ede34fa5",
+   "id": "22161e41",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"E3\"></a>"
@@ -105,13 +106,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca82493",
+   "id": "c6760122",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "dc53bfae",
+   "id": "ccbe5a01",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"E4\"></a>"
@@ -119,13 +120,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a9dfafe",
+   "id": "666488cf",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2450d510",
+   "id": "9b36e56e",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"E5\"></a>"
@@ -133,13 +134,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf2b919",
+   "id": "f24a8814",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ca97f822",
+   "id": "5762a36d",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"E6\"></a>"
@@ -147,13 +148,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35101a3a",
+   "id": "24c70447",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6797666f",
+   "id": "12fe49d1",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 7</font></h2> <a class=\"anchor\" id=\"E7\"></a>"
@@ -161,13 +162,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4543fa12",
+   "id": "856efe5d",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "91b2c385",
+   "id": "e7dce755",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 8</font></h2> <a class=\"anchor\" id=\"E8\"></a>"
@@ -175,13 +176,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f07c68a",
+   "id": "dbf34fb3",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fb7e2e01",
+   "id": "15d0c547",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.2 Estimation de la variance $\\sigma^2$ et Coefficient de détermination</font></h1> <a class=\"anchor\" id=\"Partie2\"></a>"
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b85c348",
+   "id": "ad6b6049",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 9</font></h2> <a class=\"anchor\" id=\"E9\"></a>"
@@ -197,13 +198,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3faf9bf9",
+   "id": "48f86ec7",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bd6c90eb",
+   "id": "4d67acaa",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 10</font></h2> <a class=\"anchor\" id=\"E10\"></a>"
@@ -211,13 +212,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9095608",
+   "id": "201fcd4b",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e231530c",
+   "id": "9d430c68",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.3 Cas de la régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie3\"></a>"
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dacc9c6",
+   "id": "c1b29071",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 11</font></h2> <a class=\"anchor\" id=\"E11\"></a>"
@@ -233,13 +234,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af9a0e2",
+   "id": "3db6e118",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "00073f90",
+   "id": "0d600d88",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 12</font></h2> <a class=\"anchor\" id=\"E12\"></a>"
@@ -247,13 +248,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d87c42",
+   "id": "f94e98d6",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7dca6f21",
+   "id": "51e6af05",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 13</font></h2> <a class=\"anchor\" id=\"E13\"></a>"
@@ -261,13 +262,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b50dd81",
+   "id": "20967a6a",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3385bd24",
+   "id": "798d3b1f",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 14</font></h2> <a class=\"anchor\" id=\"E14\"></a>"
@@ -275,13 +276,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab7fc59",
+   "id": "085d02ab",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fdc4289c",
+   "id": "562cdb97",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>1.4 Tests statistiques, cas régression linéaire gaussienne</font></h1> <a class=\"anchor\" id=\"Partie4\"></a>"
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34b7f42",
+   "id": "3ab949eb",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 15</font></h2> <a class=\"anchor\" id=\"E15\"></a>"
@@ -297,13 +298,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8f9bcb2",
+   "id": "39bce581",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b68fbcb6",
+   "id": "1b3d09d4",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 16</font></h2> <a class=\"anchor\" id=\"E16\"></a>"
@@ -311,13 +312,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b8e3210",
+   "id": "b0ad4e28",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2645cc19",
+   "id": "11f4b347",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 17</font></h2> <a class=\"anchor\" id=\"E17\"></a>"
@@ -325,13 +326,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac6f05e",
+   "id": "2c14b2d0",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "87376de8",
+   "id": "f9f65703",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 18</font></h2> <a class=\"anchor\" id=\"E18\"></a>"
@@ -339,13 +340,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8ba777e",
+   "id": "72fc9fdc",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "682792e7",
+   "id": "e9152c26",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 19</font></h2> <a class=\"anchor\" id=\"E19\"></a>"
@@ -353,13 +354,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2037545",
+   "id": "f45d526f",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "28a0c0b6",
+   "id": "442be4d3",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 20</font></h2> <a class=\"anchor\" id=\"E20\"></a>"
@@ -367,13 +368,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd027b4",
+   "id": "82e1d95e",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "11d06a30",
+   "id": "9857ed4b",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='gray'>Python Imports</font></h2> <a class=\"anchor\" id=\"imports\"></a>"
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a661fc5",
+   "id": "9ad5e29e",
    "metadata": {},
    "source": [
     "Dans cette section, on va importer tous les paquets qu'on ira utiliser."
@@ -390,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "42871e2b",
+   "id": "d152fc09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcdff68f",
+   "id": "6afe5807",
    "metadata": {},
    "source": [
     "<h1 align=\"center\"> <font color='green'>2. Pratique</font></h1> <a class=\"anchor\" id=\"Pratique\"></a>"
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f347d8c",
+   "id": "89d90395",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 1</font></h2> <a class=\"anchor\" id=\"P1\"></a>"
@@ -420,14 +421,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a1af18",
+   "id": "94edc864",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "db4168f5",
+   "id": "6637ae57",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 2</font></h2> <a class=\"anchor\" id=\"P2\"></a>"
@@ -436,14 +437,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd4d38bb",
+   "id": "1409b9d8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3bb7ef00",
+   "id": "e7b1a54c",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 3</font></h2> <a class=\"anchor\" id=\"P3\"></a>"
@@ -452,14 +453,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f7d349b",
+   "id": "61439c56",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "06922043",
+   "id": "a9e0f66b",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 4</font></h2> <a class=\"anchor\" id=\"P4\"></a>"
@@ -468,14 +469,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9797104",
+   "id": "0b34059b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a381a404",
+   "id": "6098db3b",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 5</font></h2> <a class=\"anchor\" id=\"P5\"></a>"
@@ -484,14 +485,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "777afb4f",
+   "id": "d8023aca",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "af817883",
+   "id": "fc22ca25",
    "metadata": {},
    "source": [
     "<h2 align=\"center\"> <font color='blue'>Exercice 6</font></h2> <a class=\"anchor\" id=\"P6\"></a>"
@@ -500,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f229f4b6",
+   "id": "e2998045",
    "metadata": {},
    "outputs": [],
    "source": []
